--- a/Vanessas Work/moviedata_cleaning.ipynb
+++ b/Vanessas Work/moviedata_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "220b5e57",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "220c4a42",
    "metadata": {
     "scrolled": true
@@ -111,7 +111,7 @@
        "4       1     1172     4.0  1260759205"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3b883414",
    "metadata": {
     "scrolled": false
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0ed043cf",
    "metadata": {},
    "outputs": [
@@ -423,7 +423,7 @@
        "4  [{'credit_id': '52fe42f0c3a36847f802e4d1', 'de...  1371  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "2677f66a",
    "metadata": {},
    "outputs": [
@@ -476,25 +476,25 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 30000 entries, 30925 to 4707\n",
+      "Int64Index: 35000 entries, 23141 to 43526\n",
       "Data columns (total 7 columns):\n",
       " #   Column     Non-Null Count  Dtype  \n",
       "---  ------     --------------  -----  \n",
-      " 0   userId     30000 non-null  int64  \n",
-      " 1   movieId    30000 non-null  int64  \n",
-      " 2   rating     30000 non-null  float64\n",
-      " 3   timestamp  30000 non-null  int64  \n",
-      " 4   cast       30000 non-null  object \n",
-      " 5   crew       30000 non-null  object \n",
-      " 6   id         30000 non-null  int64  \n",
+      " 0   userId     35000 non-null  int64  \n",
+      " 1   movieId    35000 non-null  int64  \n",
+      " 2   rating     35000 non-null  float64\n",
+      " 3   timestamp  35000 non-null  int64  \n",
+      " 4   cast       35000 non-null  object \n",
+      " 5   crew       35000 non-null  object \n",
+      " 6   id         35000 non-null  int64  \n",
       "dtypes: float64(1), int64(4), object(2)\n",
-      "memory usage: 1.8+ MB\n"
+      "memory usage: 2.1+ MB\n"
      ]
     }
    ],
    "source": [
     "#Get sample of merged df \n",
-    "mergedf_sample = mergedf.sample(n=30000, random_state=1234)\n",
+    "mergedf_sample = mergedf.sample(n=35000, random_state=42)\n",
     "mergedf_sample.info()"
    ]
   },
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "7fc732eb",
    "metadata": {},
    "outputs": [],
@@ -547,25 +547,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "877ad5c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7fa84d17dbb0>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# #split back into ratings csv\n",
     "# df1 = mergedf_sample.groupby([\"userId\", \"movieId\", \"rating\", \"timestamp\"])\n",
-    "# ratings = pd.DataFrame(df1)\n",
-    "# ratings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e74fd47",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ratings.info()"
+    "# df1"
    ]
   },
   {
@@ -581,20 +581,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6e551fd3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "0561980b",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>([], [], 59810)</td>\n",
+       "      <td>userId  movieId  rating   timestamp cas...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>([], [], 81782)</td>\n",
+       "      <td>userId  movieId  rating   timestamp cas...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>([], [], 90061)</td>\n",
+       "      <td>userId  movieId  rating   timestamp cas...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>([], [{'credit_id': '52fe438cc3a36847f805cb0d'...</td>\n",
+       "      <td>userId  movieId  rating   timestamp cas...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>([], [{'credit_id': '52fe44c6c3a36847f80a92d9'...</td>\n",
+       "      <td>userId  movieId  rating   timestamp cas...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2512</th>\n",
+       "      <td>([{'cast_id': 9, 'character': 'Tony Montana', ...</td>\n",
+       "      <td>userId  movieId  rating   timestamp  \\\n",
+       "...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2513</th>\n",
+       "      <td>([{'cast_id': 9, 'character': 'Valentine Dussa...</td>\n",
+       "      <td>userId  movieId  rating   timestamp  \\\n",
+       "56...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2514</th>\n",
+       "      <td>([{'cast_id': 9, 'character': 'Valerie', 'cred...</td>\n",
+       "      <td>userId  movieId  rating   timestamp  \\\n",
+       "...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2515</th>\n",
+       "      <td>([{'cast_id': 9, 'character': 'Will Graham', '...</td>\n",
+       "      <td>userId  movieId  rating   timestamp  \\\n",
+       "...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2516</th>\n",
+       "      <td>([{'cast_id': 9, 'character': 'Yoshimura', 'cr...</td>\n",
+       "      <td>userId  movieId  rating  timestamp  \\\n",
+       "4...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2517 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                      0  \\\n",
+       "0                                       ([], [], 59810)   \n",
+       "1                                       ([], [], 81782)   \n",
+       "2                                       ([], [], 90061)   \n",
+       "3     ([], [{'credit_id': '52fe438cc3a36847f805cb0d'...   \n",
+       "4     ([], [{'credit_id': '52fe44c6c3a36847f80a92d9'...   \n",
+       "...                                                 ...   \n",
+       "2512  ([{'cast_id': 9, 'character': 'Tony Montana', ...   \n",
+       "2513  ([{'cast_id': 9, 'character': 'Valentine Dussa...   \n",
+       "2514  ([{'cast_id': 9, 'character': 'Valerie', 'cred...   \n",
+       "2515  ([{'cast_id': 9, 'character': 'Will Graham', '...   \n",
+       "2516  ([{'cast_id': 9, 'character': 'Yoshimura', 'cr...   \n",
+       "\n",
+       "                                                      1  \n",
+       "0            userId  movieId  rating   timestamp cas...  \n",
+       "1            userId  movieId  rating   timestamp cas...  \n",
+       "2            userId  movieId  rating   timestamp cas...  \n",
+       "3            userId  movieId  rating   timestamp cas...  \n",
+       "4            userId  movieId  rating   timestamp cas...  \n",
+       "...                                                 ...  \n",
+       "2512         userId  movieId  rating   timestamp  \\\n",
+       "...  \n",
+       "2513       userId  movieId  rating   timestamp  \\\n",
+       "56...  \n",
+       "2514         userId  movieId  rating   timestamp  \\\n",
+       "...  \n",
+       "2515         userId  movieId  rating   timestamp  \\\n",
+       "...  \n",
+       "2516         userId  movieId  rating  timestamp  \\\n",
+       "4...  \n",
+       "\n",
+       "[2517 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# #split back into credit df \n",
     "# df2 = mergedf_sample.groupby([\"cast\", \"crew\", \"id\"], axis=0)\n",
